# timetable_with_upstage

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CURRENT_STATE.md  PROMPTS.md  START_HERE.md  WORKFLOW.md
.github/: CODEOWNERS
.github/agent-logs/: 2026-07-13-codex-academic-api.md  2026-07-13-codex-academic-review-ui.md  2026-07-13-codex-academic-schema.md  2026-07-13-codex-flow-curriculum.md  2026-07-13-codex-p10-data-ui.md  2026-07-13-codex-p11-syllabus-ui.md  2026-07-13-codex-phase2.md  2026-07-13-codex-phase3.md  2026-07-13-codex-phase4a.md  2026-07-13-codex-phase6-ui.md  2026-07-14-codex-admission-year-selector.md  2026-07-14-codex-automatic-course-query.md  2026-07-14-codex-choice-groups-sections.md  (+49 more)
docs/: 00_프로젝트_현황_요약.md  01_의사결정_로그.md  02_기술검증_기록.md  03_아이디어_후보_평가.md  04_규칙과_지켜야할것.md  05_미해결_과제.md  06_제품_플로우_및_조합모델.md  07_학사문서_데이터_스키마.md  08_데모데이_평가항목_루브릭.md  09_데모데이_발표_준비.md  09_중간피드백_정리.md  10_UIUX_조원_git_가이드.md  11_UIUX_컨텍스트_브리핑.md  12_윤서_컨텍스트_브리핑.md  13_정현_컨텍스트_브리핑.md  14_시행착오_기록_발표용.md  15_윤서_피드백_실행계획.md  16_GA4_추적코드_상세.md  17_데이터_플로우_전체정리.md  GARBAGE_COLLECTION.md  PROJECT_STRUCTURE.md  README_사용법.md  roadmap-on-demand.md  성대_학과코드_전체.txt
extension/: README.md  manifest.json  package.json
scraper/: README.md  pyproject.toml
scraper/skku_scraper/: client.py  codes.py  collect.py  curriculum.py  models.py  ssv.py
scraper/tests/: test_client.py  test_codes.py  test_collect.py  test_curriculum.py  test_models.py  test_package.py  test_ssv.py
web/: .env.example  README.md  package-lock.json  package.json
web/src/app/: apple-icon.tsx  (+8 more)
(+135 files in other folders)
